parser/grammar/y.output

state 0
	$accept: .program $end 

	IMPORT  shift 6
	STRUCT  shift 11
	ENUM  shift 12
	TYPE  shift 13
	CONST  shift 14
	.  error

	program  goto 1
	import_list  goto 2
	import_stmt  goto 4
	declaration_list  goto 3
	declaration  goto 5
	struct_decl  goto 7
	enum_decl  goto 8
	type_alias  goto 9
	const_decl  goto 10

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  import_list.declaration_list 
	import_list:  import_list.import_stmt 

	IMPORT  shift 6
	STRUCT  shift 11
	ENUM  shift 12
	TYPE  shift 13
	CONST  shift 14
	.  error

	import_stmt  goto 16
	declaration_list  goto 15
	declaration  goto 5
	struct_decl  goto 7
	enum_decl  goto 8
	type_alias  goto 9
	const_decl  goto 10

state 3
	program:  declaration_list.    (2)
	declaration_list:  declaration_list.declaration 

	STRUCT  shift 11
	ENUM  shift 12
	TYPE  shift 13
	CONST  shift 14
	.  reduce 2 (src line 77)

	declaration  goto 17
	struct_decl  goto 7
	enum_decl  goto 8
	type_alias  goto 9
	const_decl  goto 10

state 4
	import_list:  import_stmt.    (3)

	.  reduce 3 (src line 85)


state 5
	declaration_list:  declaration.    (8)

	.  reduce 8 (src line 106)


state 6
	import_stmt:  IMPORT.module_path 

	IDENTIFIER  shift 19
	.  error

	module_path  goto 18

state 7
	declaration:  struct_decl.    (10)

	.  reduce 10 (src line 114)


state 8
	declaration:  enum_decl.    (11)

	.  reduce 11 (src line 116)


state 9
	declaration:  type_alias.    (12)

	.  reduce 12 (src line 117)


state 10
	declaration:  const_decl.    (13)

	.  reduce 13 (src line 118)


state 11
	struct_decl:  STRUCT.IDENTIFIER LBRACE field_list RBRACE 

	IDENTIFIER  shift 20
	.  error


state 12
	enum_decl:  ENUM.IDENTIFIER LBRACE variant_list RBRACE 

	IDENTIFIER  shift 21
	.  error


state 13
	type_alias:  TYPE.IDENTIFIER EQUALS type_expr 

	IDENTIFIER  shift 22
	.  error


state 14
	const_decl:  CONST.IDENTIFIER EQUALS constant_value 

	IDENTIFIER  shift 23
	.  error


state 15
	program:  import_list declaration_list.    (1)
	declaration_list:  declaration_list.declaration 

	STRUCT  shift 11
	ENUM  shift 12
	TYPE  shift 13
	CONST  shift 14
	.  reduce 1 (src line 69)

	declaration  goto 17
	struct_decl  goto 7
	enum_decl  goto 8
	type_alias  goto 9
	const_decl  goto 10

state 16
	import_list:  import_list import_stmt.    (4)

	.  reduce 4 (src line 89)


state 17
	declaration_list:  declaration_list declaration.    (9)

	.  reduce 9 (src line 110)


state 18
	import_stmt:  IMPORT module_path.    (5)
	module_path:  module_path.DOT IDENTIFIER 

	DOT  shift 24
	.  reduce 5 (src line 93)


state 19
	module_path:  IDENTIFIER.    (6)

	.  reduce 6 (src line 98)


state 20
	struct_decl:  STRUCT IDENTIFIER.LBRACE field_list RBRACE 

	LBRACE  shift 25
	.  error


state 21
	enum_decl:  ENUM IDENTIFIER.LBRACE variant_list RBRACE 

	LBRACE  shift 26
	.  error


state 22
	type_alias:  TYPE IDENTIFIER.EQUALS type_expr 

	EQUALS  shift 27
	.  error


state 23
	const_decl:  CONST IDENTIFIER.EQUALS constant_value 

	EQUALS  shift 28
	.  error


state 24
	module_path:  module_path DOT.IDENTIFIER 

	IDENTIFIER  shift 29
	.  error


state 25
	struct_decl:  STRUCT IDENTIFIER LBRACE.field_list RBRACE 
	field_list: .    (15)

	IDENTIFIER  shift 33
	.  reduce 15 (src line 128)

	field_list  goto 30
	non_empty_field_list  goto 31
	field  goto 32

state 26
	enum_decl:  ENUM IDENTIFIER LBRACE.variant_list RBRACE 

	IDENTIFIER  shift 36
	.  error

	variant_list  goto 34
	variant  goto 35

state 27
	type_alias:  TYPE IDENTIFIER EQUALS.type_expr 

	IDENTIFIER  shift 65
	LBRACKET  shift 40
	INT8  shift 41
	INT16  shift 42
	INT32  shift 43
	INT64  shift 44
	INT  shift 45
	BIGINT  shift 46
	NAT8  shift 47
	NAT16  shift 48
	NAT32  shift 49
	NAT64  shift 50
	NAT  shift 51
	BIGNAT  shift 52
	FLOAT32  shift 53
	FLOAT64  shift 54
	DECIMAL  shift 55
	STRING  shift 56
	BOOL  shift 57
	JSON  shift 58
	TIME  shift 59
	DATE  shift 60
	DATETIME  shift 61
	TIMETZ  shift 62
	DATETZ  shift 63
	DATETIMETZ  shift 64
	.  error

	qualified_name  goto 39
	type_expr  goto 37
	primitive_type  goto 38

state 28
	const_decl:  CONST IDENTIFIER EQUALS.constant_value 

	STRING_LITERAL  shift 68
	NUMBER_LITERAL  shift 67
	.  error

	constant_value  goto 66

state 29
	module_path:  module_path DOT IDENTIFIER.    (7)

	.  reduce 7 (src line 102)


state 30
	struct_decl:  STRUCT IDENTIFIER LBRACE field_list.RBRACE 

	RBRACE  shift 69
	.  error


state 31
	field_list:  non_empty_field_list.    (16)
	non_empty_field_list:  non_empty_field_list.field 

	IDENTIFIER  shift 33
	.  reduce 16 (src line 132)

	field  goto 70

state 32
	non_empty_field_list:  field.    (17)

	.  reduce 17 (src line 136)


state 33
	field:  IDENTIFIER.COLON type_expr 
	field:  IDENTIFIER.COLON QUESTION type_expr 

	COLON  shift 71
	.  error


state 34
	enum_decl:  ENUM IDENTIFIER LBRACE variant_list.RBRACE 
	variant_list:  variant_list.variant 

	IDENTIFIER  shift 36
	RBRACE  shift 72
	.  error

	variant  goto 73

state 35
	variant_list:  variant.    (22)

	.  reduce 22 (src line 168)


state 36
	variant:  IDENTIFIER.    (24)
	variant:  IDENTIFIER.COLON type_expr 

	COLON  shift 74
	.  reduce 24 (src line 176)


state 37
	type_alias:  TYPE IDENTIFIER EQUALS type_expr.    (26)

	.  reduce 26 (src line 190)


state 38
	type_expr:  primitive_type.    (30)

	.  reduce 30 (src line 222)


state 39
	type_expr:  qualified_name.    (31)
	qualified_name:  qualified_name.DOT IDENTIFIER 

	DOT  shift 75
	.  reduce 31 (src line 224)


state 40
	type_expr:  LBRACKET.RBRACKET type_expr 
	type_expr:  LBRACKET.type_expr RBRACKET type_expr 

	IDENTIFIER  shift 65
	LBRACKET  shift 40
	RBRACKET  shift 76
	INT8  shift 41
	INT16  shift 42
	INT32  shift 43
	INT64  shift 44
	INT  shift 45
	BIGINT  shift 46
	NAT8  shift 47
	NAT16  shift 48
	NAT32  shift 49
	NAT64  shift 50
	NAT  shift 51
	BIGNAT  shift 52
	FLOAT32  shift 53
	FLOAT64  shift 54
	DECIMAL  shift 55
	STRING  shift 56
	BOOL  shift 57
	JSON  shift 58
	TIME  shift 59
	DATE  shift 60
	DATETIME  shift 61
	TIMETZ  shift 62
	DATETZ  shift 63
	DATETIMETZ  shift 64
	.  error

	qualified_name  goto 39
	type_expr  goto 77
	primitive_type  goto 38

state 41
	primitive_type:  INT8.    (36)

	.  reduce 36 (src line 242)


state 42
	primitive_type:  INT16.    (37)

	.  reduce 37 (src line 244)


state 43
	primitive_type:  INT32.    (38)

	.  reduce 38 (src line 245)


state 44
	primitive_type:  INT64.    (39)

	.  reduce 39 (src line 246)


state 45
	primitive_type:  INT.    (40)

	.  reduce 40 (src line 247)


state 46
	primitive_type:  BIGINT.    (41)

	.  reduce 41 (src line 248)


state 47
	primitive_type:  NAT8.    (42)

	.  reduce 42 (src line 249)


state 48
	primitive_type:  NAT16.    (43)

	.  reduce 43 (src line 250)


state 49
	primitive_type:  NAT32.    (44)

	.  reduce 44 (src line 251)


state 50
	primitive_type:  NAT64.    (45)

	.  reduce 45 (src line 252)


state 51
	primitive_type:  NAT.    (46)

	.  reduce 46 (src line 253)


state 52
	primitive_type:  BIGNAT.    (47)

	.  reduce 47 (src line 254)


state 53
	primitive_type:  FLOAT32.    (48)

	.  reduce 48 (src line 255)


state 54
	primitive_type:  FLOAT64.    (49)

	.  reduce 49 (src line 256)


state 55
	primitive_type:  DECIMAL.    (50)

	.  reduce 50 (src line 257)


state 56
	primitive_type:  STRING.    (51)

	.  reduce 51 (src line 258)


state 57
	primitive_type:  BOOL.    (52)

	.  reduce 52 (src line 259)


state 58
	primitive_type:  JSON.    (53)

	.  reduce 53 (src line 260)


state 59
	primitive_type:  TIME.    (54)

	.  reduce 54 (src line 261)


state 60
	primitive_type:  DATE.    (55)

	.  reduce 55 (src line 262)


state 61
	primitive_type:  DATETIME.    (56)

	.  reduce 56 (src line 263)


state 62
	primitive_type:  TIMETZ.    (57)

	.  reduce 57 (src line 264)


state 63
	primitive_type:  DATETZ.    (58)

	.  reduce 58 (src line 265)


state 64
	primitive_type:  DATETIMETZ.    (59)

	.  reduce 59 (src line 266)


state 65
	qualified_name:  IDENTIFIER.    (34)

	.  reduce 34 (src line 234)


state 66
	const_decl:  CONST IDENTIFIER EQUALS constant_value.    (27)

	.  reduce 27 (src line 198)


state 67
	constant_value:  NUMBER_LITERAL.    (28)

	.  reduce 28 (src line 210)


state 68
	constant_value:  STRING_LITERAL.    (29)

	.  reduce 29 (src line 216)


state 69
	struct_decl:  STRUCT IDENTIFIER LBRACE field_list RBRACE.    (14)

	.  reduce 14 (src line 120)


state 70
	non_empty_field_list:  non_empty_field_list field.    (18)

	.  reduce 18 (src line 140)


state 71
	field:  IDENTIFIER COLON.type_expr 
	field:  IDENTIFIER COLON.QUESTION type_expr 

	IDENTIFIER  shift 65
	LBRACKET  shift 40
	QUESTION  shift 79
	INT8  shift 41
	INT16  shift 42
	INT32  shift 43
	INT64  shift 44
	INT  shift 45
	BIGINT  shift 46
	NAT8  shift 47
	NAT16  shift 48
	NAT32  shift 49
	NAT64  shift 50
	NAT  shift 51
	BIGNAT  shift 52
	FLOAT32  shift 53
	FLOAT64  shift 54
	DECIMAL  shift 55
	STRING  shift 56
	BOOL  shift 57
	JSON  shift 58
	TIME  shift 59
	DATE  shift 60
	DATETIME  shift 61
	TIMETZ  shift 62
	DATETZ  shift 63
	DATETIMETZ  shift 64
	.  error

	qualified_name  goto 39
	type_expr  goto 78
	primitive_type  goto 38

state 72
	enum_decl:  ENUM IDENTIFIER LBRACE variant_list RBRACE.    (21)

	.  reduce 21 (src line 160)


state 73
	variant_list:  variant_list variant.    (23)

	.  reduce 23 (src line 172)


state 74
	variant:  IDENTIFIER COLON.type_expr 

	IDENTIFIER  shift 65
	LBRACKET  shift 40
	INT8  shift 41
	INT16  shift 42
	INT32  shift 43
	INT64  shift 44
	INT  shift 45
	BIGINT  shift 46
	NAT8  shift 47
	NAT16  shift 48
	NAT32  shift 49
	NAT64  shift 50
	NAT  shift 51
	BIGNAT  shift 52
	FLOAT32  shift 53
	FLOAT64  shift 54
	DECIMAL  shift 55
	STRING  shift 56
	BOOL  shift 57
	JSON  shift 58
	TIME  shift 59
	DATE  shift 60
	DATETIME  shift 61
	TIMETZ  shift 62
	DATETZ  shift 63
	DATETIMETZ  shift 64
	.  error

	qualified_name  goto 39
	type_expr  goto 80
	primitive_type  goto 38

state 75
	qualified_name:  qualified_name DOT.IDENTIFIER 

	IDENTIFIER  shift 81
	.  error


state 76
	type_expr:  LBRACKET RBRACKET.type_expr 

	IDENTIFIER  shift 65
	LBRACKET  shift 40
	INT8  shift 41
	INT16  shift 42
	INT32  shift 43
	INT64  shift 44
	INT  shift 45
	BIGINT  shift 46
	NAT8  shift 47
	NAT16  shift 48
	NAT32  shift 49
	NAT64  shift 50
	NAT  shift 51
	BIGNAT  shift 52
	FLOAT32  shift 53
	FLOAT64  shift 54
	DECIMAL  shift 55
	STRING  shift 56
	BOOL  shift 57
	JSON  shift 58
	TIME  shift 59
	DATE  shift 60
	DATETIME  shift 61
	TIMETZ  shift 62
	DATETZ  shift 63
	DATETIMETZ  shift 64
	.  error

	qualified_name  goto 39
	type_expr  goto 82
	primitive_type  goto 38

state 77
	type_expr:  LBRACKET type_expr.RBRACKET type_expr 

	RBRACKET  shift 83
	.  error


state 78
	field:  IDENTIFIER COLON type_expr.    (19)

	.  reduce 19 (src line 144)


state 79
	field:  IDENTIFIER COLON QUESTION.type_expr 

	IDENTIFIER  shift 65
	LBRACKET  shift 40
	INT8  shift 41
	INT16  shift 42
	INT32  shift 43
	INT64  shift 44
	INT  shift 45
	BIGINT  shift 46
	NAT8  shift 47
	NAT16  shift 48
	NAT32  shift 49
	NAT64  shift 50
	NAT  shift 51
	BIGNAT  shift 52
	FLOAT32  shift 53
	FLOAT64  shift 54
	DECIMAL  shift 55
	STRING  shift 56
	BOOL  shift 57
	JSON  shift 58
	TIME  shift 59
	DATE  shift 60
	DATETIME  shift 61
	TIMETZ  shift 62
	DATETZ  shift 63
	DATETIMETZ  shift 64
	.  error

	qualified_name  goto 39
	type_expr  goto 84
	primitive_type  goto 38

state 80
	variant:  IDENTIFIER COLON type_expr.    (25)

	.  reduce 25 (src line 183)


state 81
	qualified_name:  qualified_name DOT IDENTIFIER.    (35)

	.  reduce 35 (src line 238)


state 82
	type_expr:  LBRACKET RBRACKET type_expr.    (32)

	.  reduce 32 (src line 227)


state 83
	type_expr:  LBRACKET type_expr RBRACKET.type_expr 

	IDENTIFIER  shift 65
	LBRACKET  shift 40
	INT8  shift 41
	INT16  shift 42
	INT32  shift 43
	INT64  shift 44
	INT  shift 45
	BIGINT  shift 46
	NAT8  shift 47
	NAT16  shift 48
	NAT32  shift 49
	NAT64  shift 50
	NAT  shift 51
	BIGNAT  shift 52
	FLOAT32  shift 53
	FLOAT64  shift 54
	DECIMAL  shift 55
	STRING  shift 56
	BOOL  shift 57
	JSON  shift 58
	TIME  shift 59
	DATE  shift 60
	DATETIME  shift 61
	TIMETZ  shift 62
	DATETZ  shift 63
	DATETIMETZ  shift 64
	.  error

	qualified_name  goto 39
	type_expr  goto 85
	primitive_type  goto 38

state 84
	field:  IDENTIFIER COLON QUESTION type_expr.    (20)

	.  reduce 20 (src line 152)


state 85
	type_expr:  LBRACKET type_expr RBRACKET type_expr.    (33)

	.  reduce 33 (src line 230)


48 terminals, 20 nonterminals
60 grammar rules, 86/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
69 working sets used
memory: parser 56/240000
35 extra closures
226 shift entries, 1 exceptions
31 goto entries
25 entries saved by goto default
Optimizer space used: output 156/240000
156 table entries, 13 zero
maximum spread: 48, maximum offset: 83
